--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,10 +1,12 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>Stock App</h1>
+ <!--<div style="text-align:center">
+ <h1>Stock App</h1>
   <p>by Ben Martin</p>
   
   
     <app-day></app-day>
+    </div>-->
+ 
   <router-outlet></router-outlet>
-</div>
+
 
