added dynamic search

--- a/frontend/src/app/day/day.component.html
+++ b/frontend/src/app/day/day.component.html
@@ -1,3 +1,5 @@
+<input [(ngModel)]="stockSymbol" (keyup.enter)="stockSearch()" >
+
 <div class="row">
   <div class="col-md-6">
     <div style="display: block;">
