--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,12 +1,15 @@
 <!--The content below is only a placeholder and can be replaced.-->
- <!--<div style="text-align:center">
- <h1>Stock App</h1>
-  <p>by Ben Martin</p>
-  
-  
-    <app-day></app-day>
-    </div>-->
- 
+ <nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
+    <div class="container">
+        <a class="navbar-brand">Stock Visualization App</a>
+        <ul class="nav navbar-nav" routerLinkActive="active">
+            <li class="nav-item"><a class="nav-link" routerLink="main">Main</a></li>
+            <li class="nav-item"><a class="nav-link" routerLink="login">Login</a></li>
+            <li class="nav-item"><a class="nav-link" routerLink="register">Register</a></li>
+        </ul>
+    </div>
+</nav>
+
   <router-outlet></router-outlet>
 
 
