--- a/frontend/src/app/day/day.component.html
+++ b/frontend/src/app/day/day.component.html
@@ -12,9 +12,7 @@
                 [options]="lineChartOptions"
                 [colors]="lineChartColors"
                 [legend]="lineChartLegend"
-                [chartType]="lineChartType"
-                (chartHover)="chartHovered($event)"
-                (chartClick)="chartClicked($event)"></canvas>
+                [chartType]="lineChartType"></canvas>
     </div>
   </div>
   <div class="col-md-6" style="margin-bottom: 10px">
